--- a/crvlibrary/build.gradle
+++ b/crvlibrary/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    api 'com.github.zihuan1:ZRecyclerHelper:latest.release'
+    api 'com.github.zihuan1:view-utils-recyclerhelper:latest.integration'
 
 }
 
